--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0.219", features = ["derive"]}
+serde_json = "1.0.140"
+smallvec = { version = "1.13.2", features = ["serde"]}
