--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.140"
-smallvec = { version = "1.13.2", features = ["serde"]}
+arrayvec = { version = "0.7", features = ["serde"] }
