--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 serde = { version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.140"
 arrayvec = { version = "0.7", features = ["serde"] }
+tokio = { version = "1.0", features = ["full"] }
+tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
+futures-util = "0.3"
+url = "2.4"
